ecs-fargate.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: This template will launch an ECS service (Fargate) for the Modernization Workshop.

Parameters:
  VPCstack:
    Type: String
    Description: VPC stack to import values from
    Default: ModernizationVPC
    
  DesiredCount:
    Type: Number
    Default: 1    

Resources:
  CloudwatchLogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupName: ProductServiceLG
      RetentionInDays: 30      

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: ProductServiceCluster

  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement: 
          - Action: "sts:AssumeRole"
            Effect: "Allow"
            Principal: 
              Service: "ecs-tasks.amazonaws.com"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
        - "arn:aws:iam::aws:policy/CloudWatchLogsFullAccess"
        - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"         
      RoleName: "FargateExecutionRolePS"
      
  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: "product-service"
      Memory: "2 gb"
      Cpu: "1 vcpu"
      NetworkMode: "awsvpc"
      ExecutionRoleArn: !Ref TaskExecutionRole
      RequiresCompatibilities: 
        - "FARGATE"
      ContainerDefinitions:
       
        - Name: product-service
          Image: 
            !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/product-service:latest'
          Cpu: 512
          Memory: 1024
          PortMappings:
            - ContainerPort: 8080
          Environment:
            - Name: DB_HOST
              Value: 127.0.0.1
            - Name: DB_NAME
              Value: petstore
            - Name: DB_PASS
              Value: password
            - Name: DB_PORT
              Value: 5432
            - Name: DB_URL
              Value: jdbc:postgresql://127.0.0.1:5432/petstore?ApplicationName=applicationPetstore
            - Name: DB_USER
              Value: admin          
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref CloudwatchLogGroup
              awslogs-stream-prefix: "web"

  
  TaskSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: ProductServiceTaskSecurityGroup
      GroupDescription: Security group for the Modernization Workshop Fargate Task
      VpcId: 
        Fn::ImportValue: !Sub "${VPCstack}:VPCId"
  
  TaskSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId: !Ref TaskSecurityGroup
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !Ref LBSecurityGroup     
  
  FargateService:
    Type: AWS::ECS::Service
    DependsOn: LoadBalancerListener
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: !Ref DesiredCount
      TaskDefinition: !Ref TaskDefinition
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref TaskSecurityGroup
          Subnets: 
            - Fn::ImportValue: !Sub "${VPCstack}:PublicSubnet1"
            - Fn::ImportValue: !Sub "${VPCstack}:PublicSubnet2"
      LoadBalancers:
        - ContainerName: product-service
          ContainerPort: 8080
          TargetGroupArn: !Ref TargetGroup
      ServiceName: ProductService
      
  LBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: LbSecurityGroupPS
      GroupDescription: Security group the the Modernization Workshop Application Load Balancer
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: 'tcp'
          FromPort: '8080'
          ToPort: '8080'
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "TCP"
          FromPort: 80
          ToPort: 80
      VpcId: 
        Fn::ImportValue: !Sub "${VPCstack}:VPCId"

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: Product-Service-LB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref LBSecurityGroup
      Subnets:
        - Fn::ImportValue: !Sub "${VPCstack}:PublicSubnet1"
        - Fn::ImportValue: !Sub "${VPCstack}:PublicSubnet2"
      Tags:
        - Key: Name
          Value: Product-Service-LB
      Type: application
      IpAddressType: ipv4

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: LoadBalancer
    Properties:
      Name: ecs-product-service
      VpcId: 
        Fn::ImportValue: !Sub "${VPCstack}:VPCId"
      Port: 8080
      Protocol: HTTP
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /healthz
      HealthCheckProtocol: HTTP
      TargetType: ip
          
Outputs:
  Service:
    Value: !Ref FargateService
  
  TargetGroup:
    Value: !Ref TargetGroup

  ServiceUrl:
    Description: URL of the load balancer for the sample service.
    Value: !Sub http://${LoadBalancer.DNSName}
